Resources/assets/css/_product-card.scss
@import "./config";

.product-card {
  position: relative;
  border-bottom: 1px solid $grey-lighter;
  margin-bottom: 1rem;
  height: 100%;
}

.product-card__inner {
  height: 100%;
}

.product-card__link {
  position: absolute;
  opacity: 0;
  overflow: hidden;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  z-index: 1;
}

.product-card__link:hover {
  opacity: 1;
  background: rgba(0, 0, 0, 0.025);
}

.product-card__image {
  display: inline-block;
  position: relative;
  width: 100%;
  overflow: hidden;
}

.product-card__image-inner {
  width: 100%;
  height: 0;
  padding-bottom: $product-image-ratio;
}

.product-card__meta {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  z-index: 2;
}

.product-card__badges {
  width: 50%;
}

.product-card__badge {
  display: block;
}

.product-card__badge--reduction .badge {
  @extend .badge--red;
}

.product-card__availability {
  position: absolute;
  top: 0;
  right: 0;
}

.product-card__info {
  z-index: 2;
}

.product-card__brand {
  font-size: $size-7;
  color: $grey;
}

.product-card__title {
  position: relative;
  font-weight: $weight-medium;
  color: $black-ter;
  z-index: 3;
  height: 50px;
  text-overflow: ellipsis;
  overflow: hidden;
  display: inline-block;
}

.product-card__controls {
  display: flex;
}

.product-card__price {
  width: 70%;
}

.product-card__actions {
  width: 30%;
  display: none;
  text-align: right;
  z-index: 3;
}

.product-card:hover .product-card__actions {
  display: block;
}

.product-card--shadow {
  height: 300px;
  opacity: 0.3;
}

.product-card--shadow::after {
  content: " ";
  display: block;
  margin: 20px;
  height: 100%;
  background: $grey-lighter;
  animation-name: product-card--shadow-pulse;
  animation-duration: 2s;
  animation-iteration-count: infinite;
}

@keyframes product-card--shadow-pulse {
  0% {
    background-color: $grey-lighter;
  }
  50% {
    background-color: $grey-light;
  }
  100% {
    background-color: $grey-lighter;
  }
}

